Update .travis.yml, build.sh, and 7 more files...