@@ -1,60 +1,18 @@
 #!/bin/bash -e
 set -e
 
-# ====== Variables
-export TD_SRC_DIR=${PWD}/dependencies/tdlight
-export TD_BIN_DIR=${PWD}/bin-td
-export TDNATIVES_BIN_DIR=${PWD}/bin-tdnatives
-export TDNATIVES_CPP_SRC_DIR=${PWD}/src/tdnatives-cpp
-export TDNATIVES_DOCS_BIN_DIR=${PWD}/bin-docs
-export TD_BUILD_DIR=${PWD}/build-td
-export TDNATIVES_CPP_BUILD_DIR=${PWD}/build-tdnatives
-export JAVA_SRC_DIR=${PWD}/src/tdnatives-java
-export TDLIB_SERIALIZER_DIR=${PWD}/dependencies/tdlib-serializer
+# ====== Setup environment variables
+./setup_variables.sh
 
-# ====== Print variables
-echo "TD_SRC_DIR=${TD_SRC_DIR}"
-echo "TD_BIN_DIR=${TD_BIN_DIR}"
-echo "JAVA_SRC_DIR=${JAVA_SRC_DIR}"
-
-if [ "$TRAVIS_OS_NAME" = "windows" ]; then
-	export PATH="$PATH:/c/Program Files (x86)/Microsoft Visual Studio/2019/BuildTools/VC/Tools/MSVC/14.27.29110/bin/Hostx64/x64:/c/Program Files/OpenJDK/openjdk-11.0.8_10/bin:/c/Program Files/CMake/bin:/c/ProgramData/chocolatey/bin:/c/Program Files/apache-maven-3.6.3/bin:/c/ProgramData/chocolatey/lib/maven/apache-maven-3.6.3/bin:/c/ProgramData/chocolatey/lib/base64/tools:/c/Program Files/NASM"
-    export JAVA_HOME="/c/Program Files/OpenJDK/openjdk-11.0.8_10"
-    export JAVA_INCLUDE_PATH="/c/Program Files/OpenJDK/openjdk-11.0.8_10/include"
-else
-    export PATH="$PATH:/usr/lib/jvm/java-11-openjdk-$(dpkg --print-architecture)/bin"
-    export JAVA_HOME="/usr/lib/jvm/java-11-openjdk-$(dpkg --print-architecture)"
-    export JAVA_INCLUDE_PATH="/usr/lib/jvm/java-11-openjdk-$(dpkg --print-architecture)/include"
-fi
-export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/javax.crypto=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
-
-if [ "$TRAVIS_CPU_ARCH" = "arm64" ]; then
-    export TRAVIS_CPU_ARCH_STANDARD="aarch64"
-else
-    export TRAVIS_CPU_ARCH_STANDARD="${TRAVIS_CPU_ARCH,,}"
-fi
-export TRAVIS_OS_NAME_STANDARD="${TRAVIS_OS_NAME,,}"
-if [ "$TRAVIS_OS_NAME_STANDARD" = "windows" ]; then
-	export TRAVIS_OS_NAME_SHORT="win"
-else
-	export TRAVIS_OS_NAME_SHORT=$TRAVIS_OS_NAME_STANDARD
-fi
-if [ "$TRAVIS_OS_NAME_STANDARD" = "windows" ]; then
-    export SRC_TDJNI_LIBNAME="libtdjni.dll"
-    export DEST_TDJNI_LIBNAME="tdjni.dll"
-else
-    export SRC_TDJNI_LIBNAME="libtdjni.so"
-    export DEST_TDJNI_LIBNAME="tdjni.so"
+# ====== Copy build output
+if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+  mv $TDNATIVES_BIN_DIR/libtdjni.so $TRAVIS_BUILD_DIR/out/libtdjni.so
+  mv $TDNATIVES_DOCS_BIN_DIR $TRAVIS_BUILD_DIR/out/docs
+elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
+  mv $TDNATIVES_BIN_DIR/tdjni.dll $TRAVIS_BUILD_DIR/out/libtdjni.dll
 fi
 
-echo "TRAVIS_OS_NAME: $TRAVIS_OS_NAME"
-echo "TRAVIS_OS_NAME_STANDARD: $TRAVIS_OS_NAME_STANDARD"
-echo "TRAVIS_OS_NAME_SHORT: $TRAVIS_OS_NAME_SHORT"
-echo "TRAVIS_CPU_ARCH: $TRAVIS_CPU_ARCH"
-echo "TRAVIS_CPU_ARCH_STANDARD: $TRAVIS_CPU_ARCH_STANDARD"
-echo "SRC_TDJNI_LIBNAME: $SRC_TDJNI_LIBNAME"
-echo "DEST_TDJNI_LIBNAME: $DEST_TDJNI_LIBNAME"
-# End setup variables
+# ====== Deploy phase
 
 # Setup ssh
 mkdir -p ~/.ssh
@@ -108,13 +66,13 @@ fi
 if [ "$TRAVIS_OS_NAME_STANDARD" = "linux" ]; then
     if [ "$TRAVIS_CPU_ARCH" = "amd64" ]; then
 
-        # ====== Patch TdApi.java
+        # Patch TdApi.java
         echo "Patching TdApi.java"
         python3 $TDLIB_SERIALIZER_DIR $JAVA_SRC_DIR/it/tdlight/tdnatives/TdApi.java $JAVA_SRC_DIR/it/tdlight/tdnatives/new_TdApi.java $TDLIB_SERIALIZER_DIR/headers.txt
         rm $JAVA_SRC_DIR/it/tdlight/tdnatives/TdApi.java
         unexpand --tabs=2 $JAVA_SRC_DIR/it/tdlight/tdnatives/new_TdApi.java > $JAVA_SRC_DIR/it/tdlight/tdnatives/TdApi.java
         rm $JAVA_SRC_DIR/it/tdlight/tdnatives/new_TdApi.java
-        
+
    		# Upgrade the file of tdlight-java
 		cd $TRAVIS_BUILD_DIR
 		[ -d tdlight-java ] && sudo rm -rf --interactive=never tdlight-java
